--- a/FormHook/src/App.css
+++ b/FormHook/src/App.css
@@ -32,3 +32,9 @@ input[type="data"] {
   color: red;
   text-align: left;
 }
+.btn-submit {
+  margin-top: 20px;
+}
+.btn-remove {
+  margin-top: 20px;
+}
